--- a/templates/SignUp.html
+++ b/templates/SignUp.html
@@ -26,7 +26,7 @@
         {% endif %}
     
         <input type="number" placeholder="Age" name="age" required>
-        <input type="text" placeholder="Name (optional)" name="name">
+        <input type="text" placeholder="Name" name="name">
         <input type="email" placeholder="Email" name="email" required>
         <input type="password" placeholder="Password" name="password" required>
     
